visuals/grammar.ebnf
Program = Block .
Block = Statement { Statement } Separator .
Statement = { Assignment | Loop | Condition | Goto | Label | Output } Separator .
Assignment = { var Space } Ident { Space } ':=' { Space } Expression .
Expression = Operand { { Space } Operation { Space } Expression } | '(' Expression ')' .
Operand = Ident | Number | input .
Number = Digit { Digit } .
Loop = repeat Separator Block Separator until Space LogicalExpression .
LogicalExpression = Expression { Space } LogicalOperation { Space } Expression .
Condition = if Space LogicalExpression Separator Block .
Goto = goto Space Ident .
Label = label Space Ident .
Ident = Letter { Letter | Digit } .
Output = print Space Expression .
Letter = a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z .
Digit = '0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9' .
Operation = '+' | '-' | '*' | '/' | '^' .
LogicalOperation = '<' | '>' | '<=' | '>=' | '==' | '!=' .
Separator = '\n' { Space } .
Space = ' ' { ' ' } .
